These are changes that use the new Ferret attribute structure (if available) so that attributes that contain ":" an other weird characters don't stop the XML parsing.  This is the fix for #481.
git-svn-id: file:///home/users/tmap/svn/repos/baker/trunk@2794 fdbf22ae-c210-0410-be80-ca943da6b8f8